
- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 9
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta9

Fixes:

- Tables: set_value as an empty list caused crash #93

New Commands:

- Fonts:  added custom_glyph_chars and custom_glyph_ranges to add_addition_font

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 8
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta8

Fixes:

- File Dialog: Now returns file directory and file name (not path to file)

New Commands:

- Plots:  new command add_area_series
- Other:  new command set_main_window_title
- Other:  new command is_dearpygui_running

Breaking Changes:

- File Dialog: File name extension is shown correctly now, fixing issue #88

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 7
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta7

Fixes:

- DataSources: Data sources now act consistent (added before or after a sourced widget) #56

New Commands:

- Fonts:  new command add_additional_font
- Styles: new command show_style_editor
- Styles: new command set_style_window_padding
- Styles: new command set_style_frame_padding
- Styles: new command set_style_item_spacing
- Styles: new command set_style_item_inner_spacing
- Styles: new command set_style_touch_extra_padding
- Styles: new command set_style_indent_spacing
- Styles: new command set_style_scrollbar_size
- Styles: new command set_style_grab_min_size
- Styles: new command set_style_window_border_size